# digitaltwin-waterway

./: .env.example  .gitignore  README.md  jsconfig.json  netlify.toml  requirements.txt  vue.config.js
dtv_backend/: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.example  LICENSE  MANIFEST.in  Makefile  README.rst  environment.yml  locks.pickle  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
dtv_backend/.github/: ISSUE_TEMPLATE.md
dtv_backend/data/: DTV_shiptypes_database.json  DTV_shiptypes_database.xlsx  depth.csv  river_velocity.geojson  river_velocity_interpolator_gdf.pickle  river_waterlevel_interpolator_gdf.pickle
dtv_backend/docs/: Makefile  conf.py  dtv_backend.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
dtv_backend/dtv_backend/: __init__.py  berthing.py  chart_templates.py  charts.py  cli.py  climate.py  compat.py  dtv_backend.py  fis.py  lock.py  lock_packing.py  logbook.py  postprocess_lock.py  postprocessing.py  scheduling.py  server.py  simple.py  simulate.py
dtv_backend/dtv_backend/activities/: __init__.py  move_activity.py
dtv_backend/dtv_backend/core/: move_module.py  sites.py  vessels.py
dtv_backend/dtv_backend/fleet/: NPRCfleet.py  fleet_module.py
dtv_backend/dtv_backend/network/: build_network_functions.py  network.py  network_utilities.py  pyFIS.py
dtv_backend/tests/: 2022-09-05.geojson  __init__.py  example_response.json  test_dtv_backend.py  test_energy.py  test_route.py  test_scheduling.py  test_server.py  test_simple.py
dtv_frontend/: .eslintrc.js  (+4 more)
(+150 files in other folders)
